--- a/styles/architects.css
+++ b/styles/architects.css
@@ -8,3 +8,89 @@
   font-weight: 400;
   font-style: normal;
 }
+
+/* shared styles */
+.display-flex{
+  display: flex;}
+  /* gray 02 */
+   .text-gray{
+          color: #424242;}
+   /* dark 03 */
+.text-light-gray{
+          color: #727272;
+}
+.bg-light{
+  background-color: rgba(255, 144, 14, 0.1);
+}
+.btn-primary{
+
+           background-color: #FF900E;
+           color: white;
+           padding: 20px 25px;
+           border-radius: 10px;
+           font-size: 1.25rem;
+           font-weight: 600;
+           border: none;
+           
+}
+/* header styles */
+
+/* navber related styles */
+.navber{
+
+   justify-content: space-between;
+   align-items: center;
+
+}
+.brand{
+  font-weight: 700;
+  font-size: 3rem;
+}
+.nav-item{
+
+     list-style: none;
+     margin-right: 20px;
+}
+.nav-link{
+
+          text-decoration: none;
+          font-weight: 500;
+          
+}
+
+.navber, .banner{
+
+           max-width: 1440px;
+           margin: 0 auto;
+
+}
+/* banner related stylea */
+
+.banner-contant{
+
+  max-width: 850px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
+
+}
+.banner-title{
+
+        font-weight: 700;
+        font-size: 4rem;
+
+}
+        
+.banner-image{
+
+  width: 100%;
+}
+
+/* responsive media quary */
+@media screen  and (max-width: 576px) {
+
+  .navber, .nav-links{
+    flex-direction: column;
+  }
+  
+}
