--- a/styles/architects.css
+++ b/styles/architects.css
@@ -12,6 +12,15 @@
 /* shared styles */
 .display-flex{
   display: flex;}
+
+  .text-primary{
+    color: #FF900E;
+  }
+  .section-title{
+
+  font-size: 2.8rem;
+  font-weight: 700;
+}
   /* gray 02 */
    .text-gray{
           color: #424242;}
@@ -32,6 +41,14 @@
            font-weight: 600;
            border: none;
            
+}
+
+main{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+main > section{
+  margin-top: 130px
 }
 /* header styles */
 
@@ -85,12 +102,51 @@
 
   width: 100%;
 }
+/* team and featurers related styles */
+.teams{
+  align-items: center;
+}
+.team-image-container{
+  
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+.our-features{
+
+  margin-left: 130px;
+  max-width: 530px;
+}
+
+#quick-list{
+  font-weight: 500;
+
+}
 
 /* responsive media quary */
 @media screen  and (max-width: 576px) {
 
-  .navber, .nav-links{
+  .navber, .nav-links, .teams{
+         flex-direction: column;
+  }
+  .team-image-container{
+
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .our-features{
+    margin-left: 20px;
+
+  }
+ }
+ /* medium  size  device*/
+
+ @media screen and (min-width:576px) and (max-width:992px) {
+
+  .teams{
     flex-direction: column;
   }
+  .our-features{
+    margin-left: 50px auto;
+  }
   
-}
+ }
