--- a/styles/architects.css
+++ b/styles/architects.css
@@ -122,6 +122,39 @@ main > section{
   font-weight: 500;
 
 }
+/* some facts related styles */
+
+.facts-container{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+}
+.fact-card{
+
+  border: 1px solid #FF900E;
+  width: 240px;
+  height: 240px;
+  border-radius: 8px;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+.fact-number{
+
+      font-weight: 600;
+      font-size: 2.8rem;
+      margin-top: 10px;
+      margin-bottom: 5px;
+}
+
+.fact-name{
+
+        font-size: 1.25rem;
+        font-weight: 600;
+        margin-top: 10px;
+}
+.fact-description{
+     max-width: 540px;
+}
 
 /* responsive media quary */
 @media screen  and (max-width: 576px) {
