--- a/styles/architects.css
+++ b/styles/architects.css
@@ -122,6 +122,37 @@ main > section{
   font-weight: 500;
 
 }
+ /* features section related styles */
+ .features{
+
+       gap: 140px;
+
+ }
+ #features-section-title{
+
+  border-left: 5px solid #FF900E;
+  padding-left: 20px;
+ }
+ .features-card .feature-title{
+
+            font-weight: 600;
+            font-size: 1.25rem;
+            margin-top: 0px;
+            margin-bottom: 0px;
+}
+.features-card{
+
+   padding: 30px;
+   border-radius: 8px;
+   
+   box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+   margin-bottom: 20px;
+}
+
+ 
+
+
+
 /* some facts related styles */
 
 .facts-container{
@@ -155,6 +186,28 @@ main > section{
 .fact-description{
      max-width: 540px;
 }
+/* sponsor related styles */
+.sponsor-info{
+
+max-width: 540px;
+margin: 50px auto;
+text-align: center;
+
+
+
+}
+.sponsor-companies{
+
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+
+}
+.sponsor-companies img{
+
+ filter: grayscale(100%);
+
+}
+
 
 /* responsive media quary */
 @media screen  and (max-width: 576px) {
@@ -162,9 +215,17 @@ main > section{
   .navber, .nav-links, .teams{
          flex-direction: column;
   }
-  .team-image-container{
+  .team-image-container,
+   .facts-container,
+   .sponsor-companies{
 
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: 1fr;
+  }
+  .facts-container,
+  .sponsor-companies  {
+
+             gap: 24px ;
+             justify-items: center;
   }
   .our-features{
     margin-left: 20px;
