--- a/styles/architects.css
+++ b/styles/architects.css
@@ -148,6 +148,21 @@ main > section{
    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
    margin-bottom: 20px;
 }
+#experience-badge{
+
+
+  padding: 45px 42px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-top: -77px;
+  margin-left: -92px;
+}
+#experience-year{
+
+       font-size: 4rem;
+       font-weight: 700;
+}
+
 
  
 
@@ -207,6 +222,20 @@ text-align: center;
  filter: grayscale(100%);
 
 }
+/* footer related style */
+
+.footer-boss{
+
+    justify-items: center;
+    margin-top: 30px;
+}
+
+.footer-end{
+
+  background-color: #FFF4E7;
+  padding: 39px 410px;
+
+}
 
 
 /* responsive media quary */
@@ -217,6 +246,7 @@ text-align: center;
   }
   .team-image-container,
    .facts-container,
+    .features,
    .sponsor-companies{
 
     grid-template-columns: 1fr;
